--- a/AppWeb.Client/AppWeb.Client.csproj
+++ b/AppWeb.Client/AppWeb.Client.csproj
@@ -1,6 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
+	<RenderMode>WebAssembly</RenderMode>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
@@ -11,6 +12,7 @@
   <ItemGroup>
 	<ProjectReference Include="..\AppWeb.Shared\AppWeb.Shared.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.6" />
+    <PackageReference Include="MudBlazor" Version="8.8.0" />
   </ItemGroup>
 
 </Project>
