--- a/AppWeb.Client/AppWeb.Client.csproj
+++ b/AppWeb.Client/AppWeb.Client.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
 	<ProjectReference Include="..\AppWeb.Shared\AppWeb.Shared.csproj" />
+	<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.6" />
     <PackageReference Include="MudBlazor" Version="8.8.0" />
   </ItemGroup>
