--- a/AppWeb.Client/AppWeb.Client.csproj
+++ b/AppWeb.Client/AppWeb.Client.csproj
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <NoDefaultLaunchSettingsFile>true</NoDefaultLaunchSettingsFile>
     <StaticWebAssetProjectMode>Default</StaticWebAssetProjectMode>
+	<RootNamespace>AppWeb.Client</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
