--- a/AppWeb.Shared/AppWeb.Shared.csproj
+++ b/AppWeb.Shared/AppWeb.Shared.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Enums\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="12.0.0" />
+  </ItemGroup>
+
 </Project>
