--- a/AppWeb/AppWeb.csproj
+++ b/AppWeb/AppWeb.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+	<RootNamespace>AppWeb</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -26,7 +27,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Application\Graphql\" />
     <Folder Include="Controllers\" />
     <Folder Include="Models\" />
   </ItemGroup>
