--- a/AppWeb.Domain/AppWeb.Domain.csproj
+++ b/AppWeb.Domain/AppWeb.Domain.csproj
@@ -4,11 +4,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-	<RootNamespace>AppWeb.Shared</RootNamespace>
+	<RootNamespace>AppWeb.Domain</RootNamespace>
   </PropertyGroup>
-
-  <ItemGroup>
-	<PackageReference Include="FluentValidation" Version="12.0.0" />
-  </ItemGroup>
 
 </Project>
