--- a/AppWeb.Server/appsettings.json
+++ b/AppWeb.Server/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "conection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=DBLogin;Integrated Security=True;Trusted_Connection=True;TrustServerCertificate=True"
-  }
+  "AllowedHosts": "*"
 }
