--- a/AppWeb.Client/AppWeb.Client.csproj
+++ b/AppWeb.Client/AppWeb.Client.csproj
@@ -11,10 +11,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-	<ProjectReference Include="..\AppWeb.Shared\AppWeb.Shared.csproj" />
+	<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="9.0.6" />
+	<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="9.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.6" />
+	<PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="9.0.6" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.35.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.0" />
 	<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="MudBlazor" Version="8.8.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+	<ProjectReference Include="..\AppWeb.Shared\AppWeb.Shared.csproj" />
   </ItemGroup>
 
 </Project>
