AppWeb.ViewModels - applied

--- a/AppWeb.Server/appsettings.json
+++ b/AppWeb.Server/appsettings.json
@@ -10,6 +10,7 @@
     "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Database;Integrated Security=True;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Jwt": {
+    "Lifetime": "00:30:00",
     "Issuer": "AppWeb.Server",
     "Audience": "AppWeb.Client"
   }
