[ADD => conection database]

--- a/AppWeb.Server/appsettings.json
+++ b/AppWeb.Server/appsettings.json
@@ -7,8 +7,12 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
+    "Secret": "jajajustitsajoke",
     "Lifetime": "00:30:00",
     "Issuer": "AppWeb.Server",
     "Audience": "AppWeb.Client"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=DB;Integrated Security=True;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
