--- a/AppWeb.Maui/appsettings.json
+++ b/AppWeb.Maui/appsettings.json
@@ -1,11 +1,10 @@
 {
-  "ApiSettings": {
-    "BaseUrl": "https://api.appweb.com",
-    "Timeout": 30
-  },
-  "AppSettings": {
-    "AppName": "AppWeb MAUI",
-    "Version": "1.0.0",
-    "Environment": "Development"
+  "ApiBaseUrl": "https://localhost:7240",
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
   }
-} 
+}
